# project_data_mining_spotify

./: .gitignore  README.md  clf_tuning_results.csv  notebook.py  pyproject.toml  reg_tuning_results.csv  tune.py
video/: common.py  manim.cfg  render.sh  script.md
video/animations/: s01_title.py  s02_dataset_stats.py  s03_genre_bars.py  s04_correlation_grid.py  s05_popularity_flat.py  s06_silhouette_bars.py  s07_pca_scatter.py  s08_kmeans_genre.py  s09_classification_bars.py  s10_confusion_3d.py  s11_feat_imp_clf.py  s12_regression_bars.py  s13_ridge_disaster.py  s14_decisions.py  s15_conclusion.py
