[project]
name = "cs4168-data-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "marimo>=0.21.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "polars>=1.39.2",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "vl-convert-python>=1.9.0.post1",
]
